--- a/source/_posts/中的一些技巧，使你的代码更清晰，更简短，更易读！.md
+++ b/source/_posts/中的一些技巧，使你的代码更清晰，更简短，更易读！.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【译】中的一些技巧，使你的代码更清晰，更简短，更易读！
+title: 【译】ES6中的一些技巧，使你的代码更清晰，更简短，更易读！
 date: 2018-04-24 12:16:27
 tags:
 - js
